[tool.poetry]
name = "pt-cdk-demo"
version = "0.1.0"
description = ""
authors = ["Krzysztof Wilczynski <krzywil@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "^2.149.0"
constructs = "^10.3.0"
aws-cdk-aws-lambda-python-alpha = "^2.149.0a0"


[tool.poetry.group.dev.dependencies]
pydantic-settings = "^2.3.4"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.41.0"}
mypy-boto3-dynamodb = "^1.34.148"
boto3 = "^1.34.159"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
