[tool.poetry]
name = "lambda-function"
version = "0.1.0"
description = ""
authors = ["Krzysztof Wilczynski <krzywil@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.41.0"}
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
boto3 = "^1.34.159"
mypy-boto3-dynamodb = "^1.34.148"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
